tests/ui/associated-types/unconstrained-lifetime-assoc-type.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-lifetime-assoc-type.rs:13:6
   |
LL | impl<'a> Fun for Holder {
   |      ^^ unconstrained lifetime parameter
   |
help: make use of the lifetime parameter `'a` in the `self` type
   |
LL | impl<'a> Fun for Holder<'a> {
   |                        ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
